Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14346

incorrect result of intersect with ANY/ALL/IN subquery

    XMLWordPrintable

Details

    Description

      Following should return empty set

      CREATE TABLE t (i INT);
      INSERT INTO t VALUES (1),(2);
      SELECT * FROM t WHERE i != ANY ( SELECT 6 INTERSECT SELECT 3 );
      i
      2
      drop table t;
      

      test suite

      CREATE TABLE t (i INT);
      INSERT INTO t VALUES (1),(2);
      SELECT * FROM t WHERE i != ANY ( SELECT 6 INTERSECT SELECT 3 );
      drop table t;
      

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              sanja Oleksandr Byelkin
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.